--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
 
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+  <title>Frontend Mentor | NFT preview card component</title>
+</head>
+<body>
+<main class="card">
+  
+  <img src="https://static01.nyt.com/images/2021/03/12/arts/11nft-auction-cryptopunks-print/11nft-auction-cryptopunks-print-mobileMasterAt3x.jpg">
+  
+  <h3 style="color: white;">Equilibrium #3429</h3>
+  <p>Our Equilibrium collection promotes balance and calm.</p>
+  <div class="price">
+    <p style="color: hsl(178, 100%, 50%);">0.041 ETH</p> <p>3 days left</p>
+  </div>
+  <hr>
+  <p class="credentials">Creation of <span style="color: white;">Jules Wyvern</span> </p>
+  
+</main class="card">
+</body>
+</html>
