--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <img src="images/image-equilibrium.jpg>
   
-  <h3 style="color: white;">Equilibrium #3429</h3>
+  <h3>Equilibrium #3429</h3>
   <p>Our Equilibrium collection promotes balance and calm.</p>
   <div class="price">
     <p style="color: hsl(178, 100%, 50%);">0.041 ETH</p> <p>3 days left</p>
