--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <main class="card">
   
-  <img src="images/image-equilibrium.jpg>
+  <img src="images/image-equilibrium.jpg">
   
   <h3>Equilibrium #3429</h3>
   <p>Our Equilibrium collection promotes balance and calm.</p>
