--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
   <img src="images/image-equilibrium.jpg">
   
   <h3>Equilibrium #3429</h3>
+  
   <p>Our Equilibrium collection promotes balance and calm.</p>
+  
   <div class="price">
     <p style="color: hsl(178, 100%, 50%);">0.041 ETH</p> <p> 3 days left</p>
   </div>
-  <hr>
-  <p class="credentials">Creation of <span class="name">Jules Wyvern</span> </p>
   
+  <hr>
+  
+  <div class="credentials">
+    <img src="images/image-avatar.png>
+    <p>Creation of <span class="name">Jules Wyvern</span> </p>
+  </div>                                
+ 
 </main class="card">
 </body>
 </html>
