--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <hr>
   
   <div class="credentials">
-    <img src="images/image-avatar.png>
+    <img src="images/image-avatar.png">
     <p>Creation of <span class="name">Jules Wyvern</span> </p>
   </div>                                
  
