--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
   
   <hr>
   
-  <div class="credentials">
-    <p>Creation of <span class="name">Jules Wyvern</span> </p>
-  </div>                                
+    <p class="credentials">Creation of <span class="name">Jules Wyvern</span> </p>                               
  
 </main class="card">
 </body>
